# aula08_bootcamp

./: Dados_com_total.csv  etl.py  pipeline.py  pyproject.toml
data/: coleta_dia01.json  coleta_dia02.json  coleta_dia03.json
